<resources>
    <string name="app_name">SeabunnE</string>
    <string name="app_version">v0.3</string>
    <string name="splat_version">For Splatoon 2</string>

    // Fragment Names
    <string name="Schedules">Schedules</string>
    <string name="Settings">Settings</string>

    //Modes
    <string name="turfWarShort">TW</string>
    <string name="rainmakerShort">R</string>
    <string name="splatzoneShort">SZ</string>
    <string name="towerControlShort">TC</string>
    <string name="clamBlitzShort">CB</string>
    <string name="turfWar">Turf War</string>
    <string name="rainmaker">Rainmaker</string>
    <string name="splatzone">Splat Zones</string>
    <string name="towerControl">Tower Control</string>
    <string name="clamBlitz">Clam Blitz</string>
    <string name="leaguePair">League Pair</string>
    <string name="leagueTeam">League Team</string>
    <string name="privateMode">Private</string>
    <string name="fesPro">Pro</string>
    <string name="fesNormal">Normal</string>
    <string name="fesSolo">Solo</string>
    <string name="fesTeam">Team</string>
    <string name="tenTimes">10x</string>
    <string name="hundredTimes">100x</string>

    //Salmon Run
    <string name="lowTide">Low</string>
    <string name="normalTide">Normal</string>
    <string name="highTide">High</string>
    <string name="cohockCharge">Cohock Charge</string>
    <string name="fog">Fog</string>
    <string name="griller">Griller</string>
    <string name="rush">Salmonid Rush</string>
    <string name="theMothership">The Mothership</string>
    <string name="goldieSeeking">Goldie Seek</string>
    <string name="upcomingRuns">Upcoming Runs</string>

    //Rotation Frag
    <string name="regular">Regular</string>
    <string name="gachi">Ranked</string>
    <string name="league">League</string>
    <string name="splatfest">Splatfest</string>
    <string name="salmonrun">Salmon Run</string>

    //Settings Strings
    <string name="User_Authentication">User Authentication</string>
    <string name="Update_Cookie">Update Cookie</string>
    <string name="Provide_User_Id">Provide User ID</string>

    // Dialog Instructions and strings
    <string name="Cookie_Instructions">Your current Splatnet 2 IKSM Token is displayed below. If you are getting a User Authentication Error, you must update this token. Refer to the readme for instructions on how to obtain this token.</string>
    <string name="iksm">iksm =</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="auth_failure">SeabunnE was unable to connect to Splatnet 2 due to an Authentication Error. Please update your cookie in Settings.</string>
    <string name="maintainence_failure">SeabunnE was unable to connect to Splatnet 2 as the service is undergoing maintenance. Retry in a little bit.</string>
    <string name="connection_failure">SeabunnE wad unable to find the Splatnet 2 servers. Please check your internet connection.</string>

    <string name="preference_file_key">com.beryl.seabunne.preference_key</string>
</resources>