<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorTertiaryDark"
    android:padding="10dp"
    android:elevation="4dp">

    <com.beryl.seabunne.ui.views.FontTextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="@color/offWhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.beryl.seabunne.ui.views.FontTextView
        android:id="@+id/appVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="5dp"
        android:text="@string/app_version"
        android:textSize="13sp"
        android:textColor="@color/offWhiteDark"
        app:layout_constraintBottom_toBottomOf="@+id/appTitle"
        app:layout_constraintStart_toEndOf="@id/appTitle"
        app:fontType="subtitle" />

    <com.beryl.seabunne.ui.views.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splat_version"
        android:textColor="@color/offWhite"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:layout_constraintStart_toStartOf="@id/appTitle"
        app:layout_constraintEnd_toEndOf="@id/appTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>