<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:padding="15dp"
    android:background="@drawable/shape_card"
    android:foreground="@drawable/shape_card_outline"
    android:foregroundTint="@color/colorAccent">

    <com.beryl.seabunne.ui.views.FontTextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/Cookie_Instructions"
        android:textColor="@color/offWhite"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/instructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.beryl.seabunne.ui.views.FontTextView
            android:id="@+id/token_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iksm"
            android:textSize="18sp"
            android:textColor="@color/offWhiteDark"
            android:background="@color/colorTertiaryDark"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:fontType="subtitle" />

        <com.beryl.seabunne.ui.views.FontEditText
            android:id="@+id/cookie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@color/colorTertiary"
            android:textColor="@color/offWhite"
            app:layout_constraintTop_toTopOf="@+id/token_prompt"
            app:layout_constraintBottom_toBottomOf="@+id/token_prompt"
            app:layout_constraintStart_toEndOf="@+id/token_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:fontType="subtitle"
            tools:text="Cookie" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.beryl.seabunne.ui.views.FontTextView
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="8dp"
            android:background="@drawable/shape_card"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/update"
            android:textColor="@color/offWhite"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.beryl.seabunne.ui.views.FontTextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            android:padding="8dp"
            android:background="@drawable/shape_card"
            android:backgroundTint="@color/colorTertiary"
            android:text="@string/cancel"
            android:textColor="@color/offWhite"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/update_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>